--- a/SharleyanAcademy/Pages/Index.cshtml
+++ b/SharleyanAcademy/Pages/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 mb-4 ">
                 <p class="card-text">
-                    Sharleyan University is specifically I. Khounborine's Lab 8 that
+                    Sharleyan Academy is specifically I. Khounborine's Lab 8 that
                     demonstrates how to use Entity Framework Core in an
                     ASP.NET Core Razor Pages web app.
                 </p>
